2008-11-25  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.3

==================== 2.24.2 ====================

2008-11-25  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.24.2.

2008-10-22  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.2

==================== 2.24.1 ====================

2008-10-22  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.24.1.

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.1

==================== 2.24.0 ====================

2008-09-22  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.24.0.

2008-09-08  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.0

==================== 2.23.92 ====================

2008-09-08  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.23.92.

2008-09-01  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.92

==================== 2.23.91 ====================

2008-09-01  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.23.91.

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.90

==================== 2.23.6 ====================

2008-08-04  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.23.6.

2008-08-01  Matthias Clasen  <mclasen@redhat.com>

	Bug 545862 - use standard icon names

	* desktop-directories/Utility-Accessibility.directory.in:
	Use a standard icon name.

2008-07-22  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.6

==================== 2.23.5 ====================

2008-07-22  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.23.5.

2008-06-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.23.5
